--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,15 @@
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0"
   },
+  "authors": [
+    "Jesus <jesus.designer@gmail.com>"
+  ],
+ "repository": {
+    "type": "git",
+    "url": "https://github.com/goiblas/toggle-viewport"
+  },
   "resolutions": {
     "polymer": "^2.0.0"
-  }
+  },
+  "license": "MIT"
 }
